--- a/src/components/QuestionCard/index.module.scss
+++ b/src/components/QuestionCard/index.module.scss
@@ -18,12 +18,7 @@
     flex: 1;
     text-align: right;
     font-size: 12px;
-    .published {
-      color: green;
-    }
-    .unpublish {
-      color: orange;
-    }
+    justify-content: flex-end;
   }
 }
 
@@ -39,4 +34,8 @@
       color: #999;
     }
   }
+}
+
+.stared {
+  color: red;
 }
