--- a/src/layout/ManageLayout/index.module.scss
+++ b/src/layout/ManageLayout/index.module.scss
@@ -2,12 +2,10 @@
     padding: 24px 0;
     width: 1200px;
     margin: 0 auto;
-    display: flex;
-    .left {
-        width: 120px;
-    }
-    .right {
-        flex: 1;
-        margin-left: 60px;
-    }
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-sizing: border-box;
 }
