--- a/src/pages/Manage/styles/common.module.scss
+++ b/src/pages/Manage/styles/common.module.scss
@@ -12,7 +12,7 @@
 
   .right {
     flex: 1;
-    text-align: r;
+    text-align: right;
   }
 }
 
@@ -20,6 +20,7 @@
   margin-bottom: 20px;
   flex: 1;
   position: relative;
+  height: 100%;
 }
 
 .stared {
