--- a/src/pages/Question/Edit/EditHeader/index.module.scss
+++ b/src/pages/Question/Edit/EditHeader/index.module.scss
@@ -1,30 +1,34 @@
 .container {
-    background-color: #fff;
-    box-shadow: 0px 2px 10px #0000001f;
-    padding: 12px 0;
+  background-color: #fff;
+  box-shadow: 0px 2px 10px #0000001f;
+  padding: 12px 0;
 }
 
 .content {
-    display: flex;
-    margin: 0 24px;
+  display: flex;
+  margin: 0 24px;
 
-    h1 {
-        font-size: 18px;
-        margin-bottom: 0;
-        line-height: 1;
-    }
+  h1 {
+    font-size: 18px;
+    margin-bottom: 0;
+    line-height: 1;
+  }
 
-    .left {
-        flex: 1;
-    }
+  .left {
+    flex: 1;
+  }
 
-    .main {
-        flex: 1;
-        text-align: center;
-    }
+  .main {
+    flex: 1;
+    text-align: center;
+  }
 
-    .right {
-        flex: 1;
-        text-align: right;
-    }
+  .right {
+    flex: 1;
+    text-align: right;
+  }
+}
+
+.edit {
+  cursor: pointer;
 }
