--- a/src/pages/Question/Edit/index.module.scss
+++ b/src/pages/Question/Edit/index.module.scss
@@ -1,44 +1,46 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    background-color: #f0f2f5;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  background-color: #f0f2f5;
 }
 
 .content-wrapper {
-    flex: auto;
-    padding: 12px 0;
-    margin-top: 12px;
+  flex: auto;
+  padding: 12px 0;
+  overflow: hidden;
 }
 
 .content {
-    margin: 0 24px;
-    display: flex;
-    height: 100%;
-    .left {
-        width: 285px;
-        background-color: #fff;
-        padding: 0 12px;
+  margin: 0 24px;
+  display: flex;
+  height: 100%;
+  .left {
+    width: 285px;
+    background-color: #fff;
+    padding: 0 12px;
+    height: calc(100vh - 80px);
+    overflow: hidden;
+  }
+  .main {
+    flex: 1;
+    position: relative;
+    overflow: hidden;
+    .canvas-wrap {
+      position: absolute;
+      width: 400px;
+      height: 712px;
+      top: 50%;
+      left: 50%;
+      transform: translate3d(-50%, -50%, 0);
+      box-shadow: 0 2px 10px #0000001f;
+      overflow: auto;
     }
-    .main {
-        flex: 1;
-        position: relative;
-        overflow: hidden;
-        .canvas-wrap {
-            position: absolute;
-            width: 400px;
-            height: 712px;
-            top: 50%;
-            left: 50%;
-            transform: translate3d(-50%, -50%, 0);
-            box-shadow: 0 2px 10px #0000001f;
-            overflow: auto;
-        }
-    }
-    .right {
-        width: 300px;
-        background-color: #fff;
-        padding: 0 12px;
-    }
+  }
+  .right {
+    width: 300px;
+    background-color: #fff;
+    padding: 0 12px;
+  }
 }
